# Homeworks

./: .gitignore  README.md  requirements-dev.txt  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  docker_03.bat  pyproject.toml
homework_03/App/: app.py
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_05/: app.py
homework_05/static/css/: homepage.css
homework_05/templates/: about.html  base.html  index.html
